Layout bug

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -138,6 +138,10 @@ body {
 .navbar-default .navbar-nav>li>.dropdown-menu>li>a {
 	color: #ffffff;
 }
+.navbar-default .navbar-nav>li>.dropdown-menu>li> a > i {
+	vertical-align: middle;
+	margin-right: 10px;
+}
 
 .navbar-default .navbar-nav>li>.dropdown-menu>li>a:hover,
 	.navbar-default .navbar-nav>li>.dropdown-menu>li>a:focus {
